--- a/style.css
+++ b/style.css
@@ -1,4 +1,47 @@
+:root {
+    --bg-color: #2E3440;
+    --text-color: #D8DEE9;
+    --accent-color: #5E81AC;
+    --second-accent-color: #87BACD;
+}
+
 body {
-    color: #D8DEE9;
-    background-color: #2E3440;
+  color: var(--text-color); 
+  background-color: var(--bg-color);
+}
+
+h1 {
+  text-align: center;
+  padding-left: 15%;
+  padding-right: 15%;
+}
+
+.headerButton {
+  display: flex;
+  gap: 12px;
+  justify-content: center;
+  padding: 10px;
+}
+
+.headerButton a{
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  background-color: var(--accent-color);
+  color: var(--bg-color);
+  font-weight: bold;
+  text-decoration: none;
+  border: none;
+  padding: 12px 24px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+.headerButton a:hover {
+  background-color: var(--second-accent-color); 
+}
+
+.accent {
+  color: var(--accent-color);
 }
