--- a/style.css
+++ b/style.css
@@ -1,16 +1,35 @@
+
 :root {
-    --bg-color: #2E3440;
-    --text-color: #D8DEE9;
-    --accent-color: #5E81AC;
-    --second-accent-color: #87BACD;
+  --bg-color: #2E3440;
+  --text-color: #D8DEE9;
+  --accent-color: #5E81AC;
+  --second-accent-color: #87BACD;
+}
+
+* { box-sizing: border-box; }
+
+html, body {
+  height: 100%;
+  margin: 0;
 }
 
 body {
-  color: var(--text-color); 
+  color: var(--text-color);
   background-color: var(--bg-color);
   max-width: 800px;
   margin: 0 auto;
   padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1 0 auto;
+}
+
+footer {
+  margin-top: auto;
 }
 
 h1 {
@@ -89,7 +108,7 @@ details[open] summary.accent::before {
 details summary.accent::after {
   content: "";
   flex: 1;
-  height: 2px;
+  height: 1.5px;
   background-color: var(--text-color);
   margin-left: 0.75rem;
   background: linear-gradient(to right, var(--accent-color) 0%, var(--accent-color) 100%);
@@ -109,7 +128,7 @@ details summary.accent:hover::after {
 
 details > *:not(summary) {
   padding-left: 2.4rem;
-  font-family: 'Open Sans';
+  font-family: 'Lato';
   font-size: 1rem;
 }
 
@@ -118,9 +137,26 @@ details > *:not(summary) {
   font-style: italic;
 }
 
-
 .coursework {
-  display: inline-block;
-  padding-left: 1rem;
-  font-style: normal;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5em;
+}
+
+.coursework span::after {
+  content: " •";
+  margin-left: 0.5em;
+}
+
+.coursework span:last-child::after {
+  content: "";
+}
+
+footer {
+  text-align: center;
+  padding-top: 1rem;
+  border-top: 1px solid var(--accent-color);
+  font-family: 'Lato', sans-serif;
+  color: var(--text-color);
+  font-size: 0.9rem;
 }
